--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Oswald:wght@500&family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Oswald:wght@500&family=Rubik&family=Signika+Negative&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
